     eivind@freebsd.org
   - stevesk@cvs.openbsd.org 2001/07/26 17:18:22
     [sshd.8 sshd.c]
     add -t option to test configuration file and keys; pekkas@netcore.fi
     ok markus@
   - rees@cvs.openbsd.org 2001/07/26 20:04:27
     [scard.c ssh-keygen.c]
     Inquire Cyberflex class for 0xf0 cards
     change aid to conform to 7816-5
     remove gratuitous fid selects

20010803
 - (djm) Fix interrupted read in entropy gatherer. Spotted by markus@ on
   a fast UltraSPARC.

20010726
 - (stevesk) use mysignal() in protocol 1 loop now that the SIGCHLD
   handler has converged.

20010725
 - (bal) Added 'install-nokeys' to Makefile to assist package builders.

20010724
 - (bal) 4711 not 04711 for ssh binary.

20010722
 - (bal) Starting the Unicossmk merger.  File merged TODO, configure.in,
 	 myproposal.h, ssh_prng_cmds.in, and openbsd-compat/Makefile.in.
	 Added openbsd-compat/bsd-cray.c.  Rest will be merged after
	 approval.  Selective patches from William L. Jones 
	 <jones@mail.utexas.edu> 
 - OpenBSD CVS Sync
   - markus@cvs.openbsd.org 2001/07/18 21:10:43
     [sshpty.c]
     pr #1946, allow sshd if /dev is readonly
   - stevesk@cvs.openbsd.org 2001/07/18 21:40:40
     [ssh-agent.c]
     chdir("/") from bbraun@synack.net; ok markus@
   - stevesk@cvs.openbsd.org 2001/07/19 00:41:44
     [ssh.1]
     escape chars are below now
   - markus@cvs.openbsd.org 2001/07/20 14:46:11
     [ssh-agent.c]
     do not exit() from signal handlers; ok deraadt@
   - stevesk@cvs.openbsd.org 2001/07/20 18:41:51
     [ssh.1]
     "the" command line

20010719
 - (tim) [configure.in] put inet_aton back in AC_CHECK_FUNCS.
	 report from Mark Miller <markm@swoon.net>

20010718
 - OpenBSD CVS Sync
   - stevesk@cvs.openbsd.org 2001/07/14 15:10:17
     [readpass.c sftp-client.c sftp-common.c sftp-glob.c]
     delete spurious #includes; ok deraadt@ markus@
   - markus@cvs.openbsd.org 2001/07/15 16:17:08
     [serverloop.c]
     schedule client alive for ssh2 only, greg@cheers.bungi.com